<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.elano.jessie.swoosh.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/welcome_screen_bg"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/ivSwooshImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tvGoAllIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_go_all_in"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/ivSwooshImage"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvOnGoingAllOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_on_going_all_out"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/tvGoAllIn"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_swoosh_description"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_below="@+id/tvOnGoingAllOut"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/text_get_started"
        android:background="@drawable/button_border"
        android:onClick="start"/>

</RelativeLayout>
