<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elano.jessie.swoosh.SkillActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/beginner_baller_bg"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/ivSwooshImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tvDesiredLeague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/text_skill_description"
        android:textSize="@dimen/activity_text_size"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ivSwooshImage"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDesiredLeague"
        android:layout_alignStart="@+id/btnFinish"
        android:layout_alignEnd="@+id/btnFinish">

        <Button
            android:id="@+id/btnBeginner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/text_button_beginner"
            android:textAllCaps="false"
            android:background="@drawable/button_border"/>

        <Button
            android:id="@+id/btnBaller"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDesiredLeague"
            android:layout_column="12"
            android:layout_row="0"
            android:background="@drawable/button_border"
            android:text="@string/text_button_baller"
            android:textAllCaps="false" />
    </GridLayout>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/text_button_finish"
        android:background="@drawable/button_border"
        android:onClick="finish"/>

</RelativeLayout>
